--- a/websiteWR/angular.json
+++ b/websiteWR/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/material-icons-font/material-icons-font.css"
             ],
             "scripts": []
           },
