--- a/websiteWR/package.json
+++ b/websiteWR/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "material-icons-font": "^2.1.0",
+    "ng-zorro-antd": "^10.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
