--- a/websiteWR/package.json
+++ b/websiteWR/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "@swimlane/ngx-datatable": "^18.0.0",
+    "@types/mapbox-gl": "^2.0.0",
+    "mapbox-gl": "^2.0.1",
     "material-icons-font": "^2.1.0",
     "ng-zorro-antd": "^10.2.1",
     "rxjs": "~6.6.0",
