--- a/websiteWR/package.json
+++ b/websiteWR/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@swimlane/ngx-datatable": "^18.0.0",
     "@types/mapbox-gl": "^2.0.0",
     "mapbox-gl": "^2.0.1",
+    "mapbox-gl-geocoder": "^2.0.1",
     "material-icons-font": "^2.1.0",
     "ng-zorro-antd": "^10.2.1",
     "rxjs": "~6.6.0",
